feat(register): add register endpoint Add register endpoint within Auth controlle